----------------------------------------------------------------------
 OmegaT 3.0.7 
----------------------------------------------------------------------
   3 Enhancements
   1 Bug fix
   1 Localisation update
----------------------------------------------------------------------
3.0.7 upate 1 vs. 3.0.6

  Other enhancements:
  
  - The auto-text file type is displayed in the file selector.

  - In the Editor, the tooltip is now the same as the title

  - There's a new report in Tools: Match Statistics per Files
It gives the same information as the match statistics for every file,
plus the total at the end, with the repetitions being split in two 
lines: 
"Repetitions within this file" lists repetition for which the first 
occurence is in this file.
"Repetitions from other files" list repetition for which the first 
occurence is in a previous file in the list.

  Bug fixes:

  - After creating a new project, the message "Loading TMX files..."
remained displayed at the bottom of the window

  Localisation updates:

  - Japanese localisation updated to 3.0.6 update 1 (UI)

----------------------------------------------------------------------
 OmegaT 3.0.6
----------------------------------------------------------------------
   9 Enhancements
   3 Bug fixes
   2 Localisation updates
----------------------------------------------------------------------
3.0.6 vs. 3.0.5

  Implemented requests:

  - Add Hunspell-based tokenizer 
  https://sourceforge.net/p/omegat/feature-requests/901/

  - Reduce automatically size of Project Properties and File Filter dialogs when they don't fit on screen
  https://sourceforge.net/p/omegat/feature-requests/899/

  - Add "Totals" row to match statistics 
  https://sourceforge.net/p/omegat/feature-requests/592/

  - Creating Current Translated Document
  https://sourceforge.net/p/omegat/feature-requests/880/

  - Standardize on type of numbering in list for fuzzy matches 
  https://sourceforge.net/p/omegat/feature-requests/897/
